--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Gregory Morris # your name (or website title) here
 logo: "/images/logo-cropped.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  12 years of healthcare experience with 8 years in technology. I have demonstrated project leadership, customer development, and system thinking that have led to an over $4M yearly increase in revenue. Experienced in cross-functional team management and communicating with stakeholders at all levels of the organization.  
   <br><br>
   Second description 
   <br><br>
